--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "gulpfile.js",
   "dependencies": {
     "angular": "^1.4.5",
+    "gulp-livereload": "^3.8.0",
     "gulp-sequence": "^0.4.1",
     "infinity": "git+https://github.com/airbnb/infinity.git",
     "jquery": "^2.1.4"
