--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,6 +7,7 @@
         "removeComments": false,
         "noEmit": false,
         "noResolve": false,
+        "noLib": false,
         "watch": true
     }
 }
